--- a/demo/src/hojas-de-estilo/stylesHome.css
+++ b/demo/src/hojas-de-estilo/stylesHome.css
@@ -73,11 +73,133 @@ body {
 
 .carousel-item{
   width: 100%;
-  height: 500px;
+  height: 450px;
 }
 
 .infoBox{
   font-size: 15px;
+}
+
+.vertical-menu {
+  display: flex;
+  border-radius: 5%;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-gray);
+  padding: 15px; /* Espaciado del rectángulo */
+  width: 300px;
+  padding-bottom: 0;
+  margin-bottom: 15px;
+}
+
+.box {
+  background-color: var(--light-gray);
+  padding: 20px;
+  border-radius: 5px;
+  width: 300px;
+}
+
+.social-media-box {
+  display: flex;
+  border-radius: 3%;
+  flex-direction: column;
+  background-color: var(--white);
+  padding: 15px; /* Espaciado del rectángulo */
+  padding-bottom: 0;
+  font-size: 1.2rem;
+}
+
+.social-media-box img{
+  margin-right: 10px;
+  height: 30px;
+  width: 30px;
+}
+
+.social-media-box a {
+  text-decoration: none;
+  color: var(--dark);
+}
+
+.social-media-box a:hover {
+  text-decoration: underline;
+  color: var(--blue-s);
+}
+
+.social-media-box h3 {
+  margin-bottom: 0;
+}
+
+.social-media-box ul {
+  list-style: none;
+  padding: 0;
+}
+
+.social-separator {
+  margin-top: 0;
+  border: 1px solid var(--dark); /* Línea negra horizontal como separador */
+}
+
+.news-box {
+  background-color: var(--light-gray);
+  padding: 20px;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  margin-left: 15px;
+  height: auto;
+}
+
+.news {
+  background-color: var(--white);
+  padding: 20px;
+  border-radius: 5px;
+  height: auto;
+}
+
+.news-item {
+ cursor: pointer;
+}
+
+.news h2 {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.news h3{
+  font-size: 20px;
+}
+
+.news p{
+  font-size: 15px;
+}
+
+.news p:hover, h3:hover{
+  color: var(--blue-s);
+  text-decoration: underline;
+}
+
+.news-separator {
+  border: 1px solid var(--dark); /* Línea negra horizontal como separador */
+  margin: 15px 0;
+}
+
+.pagination {
+  margin-top: 10px;
+  margin-bottom: 0;
+  display: flex;
+  justify-content: end;
+}
+
+.pagination .page-item .page-link {
+  width: 30px;
+  font-size: large;
+  background-color: var(--light-gray);
+  border: 1px solid var(--gray); 
+  color: var(--white); 
+}
+
+.pagination .page-item.active .page-link {
+  background-color: var(--gray); 
+  color: var(--white);
 }
 
 .footer {
@@ -89,6 +211,8 @@ body {
   bottom: 0;
   width: 100%;
 }
+
+
 
 
 
