--- a/demo/src/hojas-de-estilo/stylesHome.css
+++ b/demo/src/hojas-de-estilo/stylesHome.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 :root{
   --dark: #000000;
@@ -9,37 +8,12 @@
   --blue-s: #0D4185
 }
 
-*::selection{
-  background:var(--blue-s);
-  color:#fff;
-}
-
-*::-webkit-scrollbar{
-  height: .5rem;
-  width: 1rem;
-}
-
-*::-webkit-scrollbar-track{
-  background-color: transparent;
-}
-
-*::-webkit-scrollbar-thumb{
-  background-color: var(--blue-s);
-}
-
-*{
-  font-family: 'Nunito', sans-serif;
-  box-sizing: border-box;
-  text-transform: capitalize;
-  text-decoration: none;
-}
-
-body {
+.home-body {
   background-color: var(--white);
   color: #000000;
 }
 
-.header {
+.home-header {
   background-color: var(--blue-s);
   padding: 10px;
   color: var(--white);
@@ -202,7 +176,7 @@ body {
   color: var(--white);
 }
 
-.footer {
+.home-footer {
   background: var(--red-s);
   color: var(--white);
   text-align: center;
