--- a/demo/src/hojas-de-estilo/stylesHome.css
+++ b/demo/src/hojas-de-estilo/stylesHome.css
@@ -19,11 +19,6 @@
   color: var(--white);
 }
 
-.vertical-line {
-  border-left: 1px solid var(--white);
-  height: 40px;
-}
-
 .header-text {
   font-size: 20px;
   padding-top: 10px;
@@ -45,11 +40,6 @@
   border-width: 2px;
 }
 
-.carousel-item{
-  width: 100%;
-  height: 450px;
-}
-
 .infoBox{
   font-size: 15px;
 }
@@ -58,19 +48,19 @@
   display: flex;
   border-radius: 5%;
   flex-direction: column;
-  align-items: center;
   background-color: var(--light-gray);
-  padding: 15px; /* Espaciado del rectángulo */
-  width: 300px;
-  padding-bottom: 0;
-  margin-bottom: 15px;
+  padding: 15px;
+  padding-bottom: 8px;
+  width: auto;
+  margin-bottom: 20px;
 }
 
 .box {
   background-color: var(--light-gray);
   padding: 20px;
   border-radius: 5px;
-  width: 300px;
+  width: auto;
+  margin-bottom: 20px;
 }
 
 .social-media-box {
@@ -116,10 +106,11 @@
 .news-box {
   background-color: var(--light-gray);
   padding: 20px;
+  margin-top: auto;
   border-radius: 15px;
-  margin-bottom: 15px;
-  margin-left: 15px;
+  margin-bottom: 20px;
   height: auto;
+  width: auto;
 }
 
 .news {
@@ -176,6 +167,12 @@
   color: var(--white);
 }
 
+.custom-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+
 .home-footer {
   background: var(--red-s);
   color: var(--white);
@@ -191,15 +188,63 @@
 
 
 
+@media (min-width: 992px) {
+  #imageCarousel {
+    max-width: 1600px; /* Ajusta el tamaño máximo para pantallas grandes */
+    margin: 0 auto; /* Centra el carrusel horizontalmente en la pantalla */
+  }
 
-@media (min-width: 576px) {
-  .header img {
-    max-width: 200px;
+  .carousel-item{
+    width: 100%;
+    height: 450px;
   }
 }
 
-@media (min-width: 768px) {
-  .header img {
-    max-width: 250px;
+/* Estilos para dispositivos medianos, como tablets */
+@media (max-width: 820px) {
+  #imageCarousel {
+    max-width: 900px; /* Ajusta el tamaño máximo para tablets */
+    margin: 0 auto; /* Centra el carrusel horizontalmente en la pantalla */
+  }
+
+  .carousel-item {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+@media (max-width: 570px) {
+  #imageCarousel {
+    max-width: 600px; /* Ajusta el tamaño máximo para tablets */
+    margin: 0 auto; /* Centra el carrusel horizontalmente en la pantalla */
+  }
+
+  .carousel-item {
+    width: 100%;
+    height: 300px;
+  }
+}
+
+/* Estilos para dispositivos pequeños, como smartphones */
+@media (max-width: 414px) {
+  #imageCarousel {
+    max-width: 100%; /* Ajusta el carrusel al ancho completo de la pantalla */
+    height: auto; /* Permite que la altura se ajuste automáticamente al contenido */
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .carousel-item {
+    width: 100%;
+    height: 200px;
+  }
+
+  .infoBox {
+    margin-bottom: 15px;
   }
 }
