--- a/demo/src/hojas-de-estilo/buttonStyle.css
+++ b/demo/src/hojas-de-estilo/buttonStyle.css
@@ -22,6 +22,10 @@
   padding-left: 0;
 }
 
+.button-text:hover{
+  text-decoration: none;
+}
+
 .button img {
   background-color: var(--white); /* Color del cuadrado blanco */
   padding: 5px; /* Espaciado dentro del cuadrado blanco */
