--- a/demo/src/hojas-de-estilo/reservation-styles.css
+++ b/demo/src/hojas-de-estilo/reservation-styles.css
@@ -11,11 +11,11 @@
 .reservation-container {
   display: flex;
   justify-content: center;
-  margin: 20px;
+  margin-top: 20px;
 }
 
 .reservation-box {
-  width: auto;
+  width: 700px;
   height: auto;
   padding: 20px;
   background-color: var(--white);
@@ -31,28 +31,36 @@
 }
 
 .separator {
-  width: 80%;
+  width: 90%;
   height: 1px; 
   background-color: var(--light-gray);
-  margin: 10px auto;
+  margin: 15px auto;
 }
 
 .reservation-header {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 10px;
-  padding: 0 10px;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center; 
+  margin: 0;
+  padding: 0;
 }
 
 .reservation-header h2 {
   margin: 0;
-  font-size: 24px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .reservation-header p {
   margin: 0;
-  font-size: 14px;
+  font-size: 10px;
+  color: var(--gray);
+  font-weight: bold;
+}
+
+.reservation-header img{
+  margin-left: 0;
 }
 
 .reservation-options {
@@ -65,7 +73,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  border: 1px solid var(--light-gray);
+  border: 2px solid var(--light-gray);
   border-radius: 5px;
   cursor: pointer;
   background-color: var(--white);
@@ -85,6 +93,11 @@
   margin-right: 10px;
 }
 
+.circle.selected {
+  background-color: var(--blue-s);
+  border: 2px solid var(--light-gray);
+}
+
 button {
   border: none;
   background: none;
@@ -92,3 +105,79 @@ button {
   cursor: pointer;
 }
 
+
+
+
+
+
+/* Estilos para tamaños de pantalla pequeños (hasta 768px) */
+@media (max-width: 768px) {
+  .reservation-box {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .separator {
+    width: 95%;
+    margin: 10px auto;
+  }
+
+  .reservation-header img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .reservation-options {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .reservation-option {
+    padding: 8px;
+  }
+
+  .circle {
+    width: 15px;
+    height: 15px;
+  }
+
+  .reservation-header h2 {
+    font-size: 18px;
+  }
+
+  .reservation-header p {
+    font-size: 10px;
+  }
+}
+
+/* Estilos para tamaños de pantalla medianos (768px - 1024px) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .reservation-box {
+    width: 90%;
+    padding: 15px;
+  }
+
+  .separator {
+    width: 80%;
+  }
+
+  .reservation-options {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .reservation-option {
+    padding: 10px;
+  }
+
+  .circle {
+    width: 20px;
+    height: 20px;
+  }
+
+  .reservation-header h2 {
+    font-size: 20px;
+  }
+
+  .reservation-header p {
+    font-size: 12px;
+  }
+}
