(Vista Auditorio v0.8) & (Vista Admin v0.5)

--- a/demo/src/hojas-de-estilo/form2-styles.css
+++ b/demo/src/hojas-de-estilo/form2-styles.css
@@ -23,6 +23,11 @@ select, textarea {
   margin-bottom: 15px;
 }
 
+.form-select {
+  border: 2px solid var(--light-gray);
+  color: var(--gray);
+}
+
 #mensaje {
   height: 93px;
   resize: none;
