--- a/demo/src/hojas-de-estilo/stylesLogin.css
+++ b/demo/src/hojas-de-estilo/stylesLogin.css
@@ -1,11 +1,3 @@
-:root{
-  --dark: #000000;
-  --light-gray:#CCCCCC;
-  --gray: #999999;
-  --white: #ffffff;
-  --red-s:linear-gradient(180deg, #CC0000, #7D0000);
-  --blue-s: #0D4185;
-}
 
 .login-body {
   background-color: var(--blue-s);
@@ -34,6 +26,16 @@
 
 .card-header h3:hover{
   text-decoration: none;
+}
+
+.forgot-pass a{
+  text-decoration: none;
+  color: var(--dark);
+}
+
+.forgot-pass a:hover {
+  text-decoration: underline;
+  color: var(--blue-s);
 }
 
 .login-footer {
