--- a/demo/src/hojas-de-estilo/form2-styles.css
+++ b/demo/src/hojas-de-estilo/form2-styles.css
@@ -46,6 +46,11 @@ select, textarea {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); 
 }
 
+.buttons {
+  margin-top: 20px;
+  margin-left: -5px;
+}
+
 
 
 
