--- a/demo/src/hojas-de-estilo/buttonStyle.css
+++ b/demo/src/hojas-de-estilo/buttonStyle.css
@@ -33,7 +33,7 @@
 
 .custom-boton {
   background-color: var(--light-gray);
-  color: var(--white);
+  color: var(--dark);
   border: 2px solid var(--gray); /* Borde gris de 2 píxeles */
   cursor: pointer;
 }
