--- a/demo/src/hojas-de-estilo/inbox-facultad-styles.css
+++ b/demo/src/hojas-de-estilo/inbox-facultad-styles.css
@@ -1,5 +1,3 @@
-/* inbox-styles.css */
-
 /* Estilos generales del contenedor */
 .inbox-container {
   background-color: var(--white);
@@ -14,7 +12,6 @@
 /* Estilos para las filas */
 /* Estilos para filas */
 .inbox-row {
-  cursor: pointer;
   display: flex;
   align-items: center;
   border: 1px solid var(--gray);
@@ -91,4 +88,15 @@
 }
 
 
+/* ESTILOS PARA FACULTAD INBOX */
 
+.inbox-option-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.inbox-option-icon:hover {
+  width: 25px;
+  height: 25px;
+  transition: 0.2s;
+}
