--- a/demo/src/hojas-de-estilo/form2-styles.css
+++ b/demo/src/hojas-de-estilo/form2-styles.css
@@ -46,6 +46,12 @@ select, textarea {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); 
 }
 
+.auditorio-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px; 
+}
+
 .buttons {
   margin-top: 20px;
   margin-left: -5px;
